# minnow

./: .gitmodules  COMM-LICENSE  Cargo.toml  README.md  dsl.rs  notes.md
.github/: FUNDING.yml
.github/workflows/: CI.yml
examples/: navigation_report.rs  struct_enum.rs  tuple_enum.rs  tuple_struct.rs  unit_enum.rs
guppy-derive/: Cargo.toml
guppy-derive/src/: lib.rs  process.rs  write.rs
guppy-derive/src/parse/: parse_struct.rs
guppy-derive/src/process/: process_enum.rs  process_struct.rs
minnow-derive/: Cargo.toml  README.md
minnow-derive/src/: lib.rs  parse.rs  process.rs  write.rs
minnow-derive/src/parse/: parse_enum.rs  parse_struct.rs
minnow-derive/src/process/: process_enum.rs  process_struct.rs
src/: bounded_model.rs  decode.rs  encode.rs  encodeable.rs  encodeable_custom.rs  float.rs  impls.rs  integer.rs  lib.rs  main.rs  main.rs.backup  navigation_report.rs  visitor.rs
src/impls/: one_shot.rs
tests/: array.rs  tuple_enum.rs  tuple_struct.rs  unit_enum.rs
