[package]
name = "minnow"
version = "0.1.0"
description = "A library and derive macro for extremely compact encoding of structs using arithmetic coding."
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/danieleades/minnow"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]

[workspace]
members = [".", "minnow-derive"]

[dependencies]
arithmetic-coding = "0.3.1"
bitstream-io = "1.2.0"
minnow-derive = { version = "0.1.0", path = "minnow-derive" }
num-traits = "0.2.14"
thiserror = "1.0.30"

[dev-dependencies]
test-case = "3.0.0"
