[package]
name = "guppy-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
arithmetic-coding = { path = "../arithmetic-coding" }
darling = "0.13.2"
num-traits = "0.2.14"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = "1.0.90"

[dev-dependencies]
proc-macro2 = "1.0.37"
bitstream-io = "1.3.0"
test-case = "2.0.2"
