[package]
name = "minnow-derive"
version = "0.1.0"
description = "A derive macro for the Minnow library."
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/danieleades/minnow"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]

[lib]
proc-macro = true

[dependencies]
arithmetic-coding = "0.3.1"
darling = "0.14.1"
num-traits = "0.2.14"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = "2.0.10"

[dev-dependencies]
proc-macro2 = "1.0.37"
bitstream-io = "1.3.0"
test-case = "3.0.0"
